--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body{
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     overflow-x: hidden;
+    background: url(images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
 }
 header {
 	position: absolute;
